# LAMP_assay_automation

./: .gitignore  Dockerfile  MaskRCNN_2nd.ipynb  Model_imageprocessing_requirements.txt  Model_to_green_value.ipynb  Model_to_green_value2.ipynb  PyTorchImSeg.ipynb  PyTorch_and_TensorFlow  README.md  Unet_1.ipynb  Working_pytorch_instance_imseg.ipynb  Working_pytorch_instance_imseg2.ipynb  Working_pytorch_instance_imseg_ccrop.ipynb  Working_pytorch_instance_imseg_resized.ipynb  argparse.py  ccrop_imseg_test_differentimages.ipynb  hybridPyTorchImSeg.ipynb  image_ingestion_crop_save.py  imagecolorsegmentationwithopencv.ipynb  instance_segmentation_model.py  masks_on_images.ipynb  masks_to_images.ipynb  masks_to_images_explore.ipynb  pytorch_finetuningimseg-test.ipynb  pytorch_instance_imseg.ipynb  pytorch_instance_imseg_the_mess.ipynb  pytorch_revised.ipynb  readDNGsavePNG.ipynb
LAMP_image_process_and_analysis/: Dockerfile  Pipfile  README.md  requirements.txt  setup.cfg
LAMP_image_process_and_analysis/image_prep_app/: .gitignore  Dockerfile  requirements.txt  setup.cfg  setup.py
LAMP_image_process_and_analysis/image_prep_app/src/: image_ingestion_crop_save.py
LAMP_image_process_and_analysis/image_prep_app/src/pycocotools/: source_file.txt
LAMP_image_process_and_analysis/inseg_train_app/: Dockerfile  Pipfile  README  requirements.txt  train_instance_seg.py
LAMP_image_process_and_analysis/instance_seg_training/: Dockerfile  Pipfile  requirements.txt  train_instance_seg.py  train_instance_seg_torchvision0130.py  train_instance_segmentation.py
(+10 files in other folders)
