[metadata]
name = LAMP-assay-color-analysis-JAPOLO 
version = 0.0.1
authors = John Polo
author_email = japolo@ncsu.edu 
description = image processing and analysis 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ncsu-landscape-dynamics/LAMP_assay_automation
project_urls =
    Bug Tracker = https://github.com/https://github.com/ncsu-landscape-dynamics/LAMP_assay_automation
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL License 
    Operating System :: Linux in a virtual environment

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9.5

[options.packages.find]
where = src
